--- a/221/221jsample.html
+++ b/221/221jsample.html
@@ -7,6 +7,26 @@
     <body>
         <h1>
             Javascript will find out the date and the browser.
-        </h1>
+             </h1>
+            <script type="text/javascript">
+  var currentTime = new Date();
+  var hours = currentTime.getHours();
+  var minutes = currentTime.getMinutes();
+  var suffix = "AM";  // use AM by default
+
+  if (minutes < 10)
+    minutes = "0" + minutes;
+
+  if (hours >= 12) {
+    suffix = "PM";
+    hours = hours - 12;
+  }
+  if (hours == 0) {
+    hours = 12;
+  }
+
+  document.write("<b><div id='d1'>" + hours + ":" +
+   minutes + " " + suffix + "</div></b>");
+</script>
     </body>
 </html>
